--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -32,10 +32,14 @@
 
 .state{
   .fields{
-    width:31%;
+    width:32%;
     float:left;
     padding-right:2%;
+    &:nth-child(3n+2){
+      padding-right:0px;
+    }
   }
+  
 
   a.add_nested_fields{
     clear:both;
