--- a/app/views/admin/states/_form.html.haml
+++ b/app/views/admin/states/_form.html.haml
@@ -9,15 +9,17 @@
   = f.semantic_fields_for :slides do |slide|
     = f.inputs "slides" do
       = slide.input :position
-      = slide.input :slide_type, as: :radio, collection: ['Blank','Title','Detail']
-      .four
-        = slide.input :text
-        = slide.input :text
-        = slide.input :text
-        = slide.input :text
-        = slide.input :text
-      .title  
-        = slide.input :text
+      = slide.inputs "Text" do
+        = slide.input :slide_type, as: :radio, collection: ['Blank','Title','Detail']
+        .four
+          = slide.input :text
+          = slide.input :text
+          = slide.input :text
+          = slide.input :text
+          = slide.input :text
+        .title  
+          = slide.input :text
+        
       = slide.inputs "Background" do
         = slide.input :background_file, as: :file
         = slide.input :retained_background_file, as: :hidden
