--- a/app/views/admin/states/_form.html.haml
+++ b/app/views/admin/states/_form.html.haml
@@ -2,7 +2,7 @@
 = semantic_nested_form_for [:admin, @state] do |f|
   = f.inputs "details" do
     = f.input :state_type, collection: ["one", "three"]
-    = f.input :background_color, as: :radio, collection: [nil, 'yellow','blue','red'],
+    = f.input :background_color, as: :radio, collection: State::BG_COLORS,
       hint: 'Can be overriden by slides',
       wrapper_html: {class: 'horizontal'},
       input_html: {class: 'horizontal'}
