--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -44,17 +44,32 @@
       }
     
       .four{
-        //display:none;
+        display:none;
         width:100%;
+        li{
+          width:100%;
+        }
        label{
          display:none;
        }
        input[type="text"]{
-         width:100%;
+         width: 100%;
+         padding: 5px 0px 5px 0px;
+         height: 30px;
+         margin: 5px 0px 0px 0px;
        }
       }
       .title{
         display:none;
+        label{
+          display:none;
+        }
+        input[type="text"]{
+          width: 100%;
+          padding: 5px 0px 5px 0px;
+          height: 30px;
+          margin: 5px 0px 0px 0px;
+        }
       }
       
       .inputs{
