add background to toggle

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -71,6 +71,9 @@
           margin: 5px 0px 0px 0px;
         }
       }
+      .background{
+        display:none;
+      }
       
       .inputs{
         padding:5px;
