move assets to requires

--- a/app/assets/stylesheets/active_admin.css.scss
+++ b/app/assets/stylesheets/active_admin.css.scss
@@ -29,96 +29,4 @@
 // .other_namespace    applies to a custom namespace named other (eg: /other)
 
 
-
-
-.slide{
-  .fields{
-    width: 30%;
-    float:left;
-    padding-right:2%;
-    .inputs{
-      .label{
-        width:100%;
-      }
-    
-      .four{
-        display:none;
-        width:100%;
-        li{
-          width:100%;
-        }
-       label{
-         display:none;
-       }
-       input[type="text"]{
-         width: 100%;
-         padding: 5px 0px 5px 0px;
-         height: 30px;
-         margin: 5px 0px 0px 0px;
-       }
-      }
-      .title{
-        display:none;
-        label{
-          display:none;
-        }
-        input[type="text"]{
-          width: 100%;
-          padding: 5px 0px 5px 0px;
-          height: 30px;
-          margin: 5px 0px 0px 0px;
-        }
-      }
-      .background{
-        display:none;
-      }
-      
-      .inputs{
-        padding:5px;
-      }
-    
-    }
-    
-    
-  }
-  
-
-  a.add_nested_fields{
-    clear:both;
-    width:100%;
-    display:block;
-  }
-  .actions{
-    clear:both;
-    width:100%;
-  }
-}
-
-
-
-%li.color_selector {
-  padding: 10px;                   
-  .color {
-    margin-right: 20px;
-  }
-  [data-selected="selected"] {
-    border: 3px solid black !important; 
-  }
-}
-
-.index_content {
-  .panels0 {
-    width: 100%;
-  }   
-  .panels3,
-  .panels2 {
-    .panel {
-      width: 29%;
-      float: left;
-    }
-  }
-}
-
-#index_footer {
-    clear: both;
-}
+@import "slides";
