add fancy edit button

--- a/app/assets/stylesheets/slides.css.scss
+++ b/app/assets/stylesheets/slides.css.scss
@@ -103,3 +103,24 @@ li.color_selector {
 #index_footer {
     clear: both;
 }
+
+.slide {
+  .action_items {
+    text-align: right;
+    height: auto;
+    padding-top: 50px;
+    a { 
+      @include light-button; 
+      padding: 12px 17px 10px;
+      margin: 0px;
+    
+      &:hover{
+        @include icon-color(#000);
+      }
+    }
+  }
+}
+
+#collection_selection_toggle_panel {
+  display: none;
+}
