--- a/app/views/admin/slides/_form.html.haml
+++ b/app/views/admin/slides/_form.html.haml
@@ -3,7 +3,7 @@
     - @slide.errors.each do |e,message|
       .flash.flash_error= message
         
-= semantic_nested_form_for [:admin, @slide] do |f|
+= semantic_form_for [:admin, @slide] do |f|
   %ol.sortable
     = f.semantic_fields_for :panels do |panel|
       %li.panel
@@ -29,8 +29,5 @@
           = panel.input :background_file, as: :file
           = panel.input :retained_background_file, as: :hidden
           = panel.input :remove_background_file, as: :boolean
-          -# = panel.link_to_remove "Remove Panel"
-    -# these links shouldn't be needed because of the "New" action shortcuts        
-    -# = f.link_to_add "Add Panel", :panels
   .clear_both  
     = f.submit "Save Slide"
