change panels to use slide color

--- a/app/assets/stylesheets/slides.css.scss
+++ b/app/assets/stylesheets/slides.css.scss
@@ -9,7 +9,7 @@ form.slide li.panel fieldset{
 
 
 
-li.color_selector {
+.color_selector {
   padding: 8px;                
   .color {
     margin: 5px;
